skin/frontend/default/default/css/ewall/onepage.css
/* ... */
   .opc ul.form-list {
     padding: 15px 20px;
   }
   .opc fieldset {
     max-width: 100%;
   }
   /* Specific steps */
   #opc-billing > .step-title {
     text-align: center;
   }
   #opc-shipping > .step-title {
     text-align: center;
   }
   #opc-payment > .step-title {
     text-align: center;
   }
   #opc-review > .step-title {
     text-align: center;
   }
   #checkoutSteps-header {
     background: #F0F0F0; /* Old browsers */

     background: -moz-linear-gradient(top,  #F0F0F0 0%, #D5D5D5 100%); /* FF3.6+ */

     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#F0F0F0), color-stop(100%,#D5D5D5)); /* Chrome,Safari4+ */

     background: -webkit-linear-gradient(top,  #F0F0F0 0%,#D5D5D5 100%); /* Chrome10+,Safari5.1+ */

     background: -o-linear-gradient(top,  #d1d1d1 0%,#D5D5D5 100%); /* Opera 11.10+ */

     background: -ms-linear-gradient(top,  #F0F0F0 0%,#D5D5D5 100%); /* IE10+ */

     background: linear-gradient(to bottom,  #F0F0F0 0%,#D5D5D5 100%); /* W3C */

     
     padding-top:0px;
     box-sizing:border-box;
     -mox-box-sizing: border-box;

     height: 108px;

     vertical-align:middle;
     border-top: 1px solid #E6E6E6;
     border-bottom: 1px solid #DFDFDF;
     box-shadow: inset 0px -1px 15px rgba(255,255,255,.3), 0px 1px 2px rgba(0,0,0,.3);
     text-align: center;
     position: relative;
     width: 100%;
     height: 90px;
     z-index: 9999;
     overflow:hidden;
   }
   #checkoutSteps-header .section {
     display: inline-block;
     width: 24.8%;
     text-align:center;
     border-left: 1px solid #F8F8F8;
     border-right: 1px solid #C2C2C2;
     height: 89px;
     box-sizing: border-box;
     padding-top: 15px;
     box-shadow: inset 0px 0px 25px rgba(255,255,255,.3);
     float: left;
     cursor:pointer;
   }
   #checkoutSteps-header .section:first-child {
     border-left: none;
   }
   #checkoutSteps-header .section:last-child {
     border-right:none;
   }
   #checkoutSteps-header .section .step-title {
     position:relative;
     text-align:center;
     background:none;
     padding:0;

     display: inline-block;
     z-index: 99999;
   }

   body.checkout-onepage-index .main-container {
    padding: 35px 0px 0 0px;
  }

  #opc-wrap {
   overflow: visible;
   position: relative;
   right: 20px;
   left: 0px;
   top: -44px;
   border-bottom: 1px solid #CFCFCF;
   box-sizing: border-box;
   padding-top: 53px;
   margin: 0 auto;
   width: 95%;
 }

 @media only screen and (max-width: 600px) {
   #opc-wrap {
    margin: 0;
    width: 100%;
  }

}


@media only screen and (max-width: 500px) {
  #opc-review .order-review .buttons-set {
    padding: 0px 14px;
    border: 0;
    margin: 0;
    height:120px;
  }
  #opc-review .buttons-set p.f-left {
    font-size:10px;

    float: le;
  }
  #review-buttons-container > span {
    font-size:10px;

    float: left;
    line-height: 1px;
  }
  .buttons-set button.button {
    float: left;
    margin-left: 0px;
    margin-top:15px;
  }
}
#checkout-review-load {
  padding-bottom: 160px;
}
.cashondelivery-instructions-content {
  height: auto;
}
#payment_form_cashondelivery {
  padding-bottom: 0;
}
.checkout-onepage-index .wrapper .main-container div.main {
  padding: 0;
}
#scroll-to-top {
  display: none !important;
}

